// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input > deve renderizar com tema default 1`] = `
<input
  className="sc-bdVaJa eRwjDY"
/>
`;

exports[`Input > deve renderizar com uma borda de 2px 1`] = `
<input
  className="sc-bdVaJa iPyePJ"
/>
`;
